--- a/html/thirdPage.html
+++ b/html/thirdPage.html
@@ -4,6 +4,7 @@
 		p{
 			color:blue;
 			font-size:36px;
+			padding: 60px;  <!--defines spacing from the border -->
 	
 		}
 
@@ -17,6 +18,9 @@
 		{
 			color:green;
 			fornt-size:20px
+			border:1px solid black;
+			margin:30px; <!--defines magin from top left bottom-->
+			
 		}
 			
 	</style>
