--- a/html/externalclass.html
+++ b/html/externalclass.html
@@ -6,8 +6,7 @@
 	<meta name="keywords" content="CSS,HTML">
 	<meta name="description" content="description of the website">
 	<meta name="author" content="anonymous">
-	
-	<meta http-equiv="refresh" ; content ="2"; url="google.com">
+	<meta http-equiv="refresh" ; content ="2; url=google.com">
 <head>
 <body>
 	
